Manifest-Files/pod.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: digibank-pod 
spec:
  containers:
    - name: test-cont 
      image: muralisocial123/aws-trans-image:latest
      ports:
        - containerPort: 4545
