Manifest-Files/resource-limit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citi-deployment-app
spec:
  selector:
    matchLabels:
      app: citi
  template:
    metadata:
      labels:
        app: citi
    spec:
      containers:
      - name: citi-container
        image: muralisocial123/citi-web-image:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
          requests:
            memory: "100Mi"  
            cpu: "100m"
        ports:
        - containerPort: 80
