Manifest-Files/cluster-ip.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: example-deployment-nginx 
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: nginx 
  template:
    metadata:
      labels:
        app: nginx
    spec:     
      containers:
        - name: nginx-app
          image: nginx:latest 
          ports: 
            - containerPort: 80
---
  apiVersion: v1 
  kind: Service
  metadata:
    name: nginx-svc
  spec:
    selector:
      app: nginx
    ports:
    - port: 80
      targetPort: 80
    type: ClusterIP
