Manifest-Files/service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: trans-deployment-svc 
spec: 
  selector:
    app: web 
  ports:
    - port: 4545
      targetPort: 4545
      protocol: TCP
  type: LoadBalancer
