Manifest-Files/trans-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: trans-ingress-deployment 
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: trans-web
  template:
    metadata:
      labels:
        app: trans-web
    spec:     
      containers:
        - name: transaction-app
          image: muralisocial123/aws-trans-image:latest
          ports: 
            - containerPort: 4545 
---
  apiVersion: v1 
  kind: Service
  metadata:
    name: transaction-deployment-svc
  spec:
    selector:
       app: trans-web
    ports:
    - port: 4545
      targetPort: 4545
    type: ClusterIP
