Manifest-Files/two-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: example-httpd-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd 
  template:
    metadata:
      labels:
        app: httpd 
    spec:
      containers:
        - name: httpd-cont 
          image: httpd 
          ports: 
            - containerPort: 80 
---
apiVersion: v1 
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
