Manifest-Files/ingress-resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/nginx(/|$)(.*)"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/httpd(/|$)(.*)"
        backend:
          service:
            name: httpd-svc
            port: 
              number: 80  
      - pathType: Prefix
        path: "/(.*)"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
